---
source: crates/embucket-functions/src/tests/string_binary/hex_encode.rs
description: "\"SELECT\n        HEX_ENCODE('A') AS single_char,\n        HEX_ENCODE(' ') AS space,\n        HEX_ENCODE('!') AS exclamation\""
---
Ok(
    [
        "+-------------+-------+-------------+",
        "| single_char | space | exclamation |",
        "+-------------+-------+-------------+",
        "| 41          | 20    | 21          |",
        "+-------------+-------+-------------+",
    ],
)
